<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/home_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_base_sub_background"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/color_base_title"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_item_image"
                android:layout_width="@dimen/home_item_image_width"
                android:layout_height="@dimen/home_item_image_height" />

            <TextView
                android:id="@+id/home_start_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/selector_button_blue"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/item_download"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_type"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_area_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_area"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_area"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_director_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_director"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_starring_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_starring"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_starring"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_source_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_source"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_source"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_compere_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_compere"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_compere"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item_description"
                    android:textColor="@color/color_base_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/home_item_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ellipsize="end"
                    android:lines="6"
                    android:textColor="@color/color_base_subtitle"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>